handle api errors a bit better (try a second time before giving up, if its a rate limitting error wait 60 secs before doing the 2nd try) fix status wrapping in toolbar handle friend updates (particularly status updates) more robustly, there were a bunch of bugs in this code

--- a/chrome/skin/toolbar.css
+++ b/chrome/skin/toolbar.css
@@ -162,7 +162,7 @@
 
 .status {
    color: #333333;
-   width: auto;
+   width: 215px;
    font-size: 11px;
    padding: 0px 0px 0px 4px;
    margin: 1px 0px 1px 2px;
